--- a/Draw/Controller/Share/ShareController~iPad.xib
+++ b/Draw/Controller/Share/ShareController~iPad.xib
@@ -122,7 +122,7 @@
 					<object class="IBUITableView" id="396200480">
 						<reference key="NSNextResponder" ref="320383738"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{0, 217}, {768, 787}}</string>
+						<string key="NSFrame">{{0, 277}, {768, 727}}</string>
 						<reference key="NSSuperview" ref="320383738"/>
 						<reference key="NSNextKeyView" ref="822474594"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -176,7 +176,7 @@
 					<object class="IBUILabel" id="822474594">
 						<reference key="NSNextResponder" ref="320383738"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{155, 277}, {429, 45}}</string>
+						<string key="NSFrame">{{155, 337}, {429, 45}}</string>
 						<reference key="NSSuperview" ref="320383738"/>
 						<reference key="NSNextKeyView"/>
 						<bool key="IBUIOpaque">NO</bool>
@@ -185,7 +185,7 @@
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 						<string key="IBUIText">No Drawing</string>
-						<object class="NSColor" key="IBUITextColor">
+						<object class="NSColor" key="IBUITextColor" id="187992176">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MCAwIDAAA</bytes>
 						</object>
@@ -195,11 +195,11 @@
 						<int key="IBUIBaselineAdjustment">1</int>
 						<float key="IBUIMinimumFontSize">10</float>
 						<int key="IBUITextAlignment">1</int>
-						<object class="IBUIFontDescription" key="IBUIFontDescription">
+						<object class="IBUIFontDescription" key="IBUIFontDescription" id="755233450">
 							<int key="type">1</int>
 							<double key="pointSize">34</double>
 						</object>
-						<object class="NSFont" key="IBUIFont">
+						<object class="NSFont" key="IBUIFont" id="1045525316">
 							<string key="NSName">Helvetica</string>
 							<double key="NSSize">34</double>
 							<int key="NSfFlags">16</int>
@@ -262,7 +262,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{384, 133}, {220, 60}}</string>
 						<reference key="NSSuperview" ref="320383738"/>
-						<reference key="NSNextKeyView" ref="396200480"/>
+						<reference key="NSNextKeyView" ref="1064431805"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -274,6 +274,27 @@
 						<reference key="IBUINormalTitleShadowColor" ref="6944340"/>
 						<reference key="IBUIFontDescription" ref="291089218"/>
 						<reference key="IBUIFont" ref="1069767249"/>
+					</object>
+					<object class="IBUILabel" id="1064431805">
+						<reference key="NSNextResponder" ref="320383738"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{166, 219}, {436, 50}}</string>
+						<reference key="NSSuperview" ref="320383738"/>
+						<reference key="NSNextKeyView" ref="396200480"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<bool key="IBUIOpaque">NO</bool>
+						<bool key="IBUIClipsSubviews">YES</bool>
+						<int key="IBUIContentMode">7</int>
+						<bool key="IBUIUserInteractionEnabled">NO</bool>
+						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+						<string key="IBUIText">Share you draws to SNS and get %d reward coins!</string>
+						<reference key="IBUITextColor" ref="187992176"/>
+						<nil key="IBUIHighlightedColor"/>
+						<int key="IBUIBaselineAdjustment">0</int>
+						<float key="IBUIMinimumFontSize">10</float>
+						<int key="IBUITextAlignment">1</int>
+						<reference key="IBUIFontDescription" ref="755233450"/>
+						<reference key="IBUIFont" ref="1045525316"/>
 					</object>
 				</array>
 				<string key="NSFrameSize">{768, 1004}</string>
@@ -344,6 +365,14 @@
 						<reference key="destination" ref="533394264"/>
 					</object>
 					<int key="connectionID">30</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">awardCoinTips</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="1064431805"/>
+					</object>
+					<int key="connectionID">32</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -431,6 +460,7 @@
 							<reference ref="372283332"/>
 							<reference ref="66482057"/>
 							<reference ref="822474594"/>
+							<reference ref="1064431805"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -484,6 +514,11 @@
 						<reference key="object" ref="66482057"/>
 						<reference key="parent" ref="320383738"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">31</int>
+						<reference key="object" ref="1064431805"/>
+						<reference key="parent" ref="320383738"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -496,6 +531,7 @@
 				<string key="21.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="22.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="31.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<real value="0.0" key="4.IBUIButtonInspectorSelectedStateConfigurationMetadataKey"/>
 				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -509,7 +545,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">30</int>
+			<int key="maxID">32</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
